--- a/style.css
+++ b/style.css
@@ -45,9 +45,16 @@ img{
     align-self: center;
 }
 
-.ver{
+.footer{
+    display: flex;
     position: absolute;
     bottom:0%;
     text-align: right;
     width: 98%;
+    justify-content: space-between;
+}
+.footer a{
+    text-decoration: none;
+    align-self: center;
+    color:rgb(210, 222, 53);
 }
