added text resizing

--- a/Calc/styles.css
+++ b/Calc/styles.css
@@ -1,41 +1,44 @@
-.calc{
-    border:solid 5px brown;
+.calc {
+    border: solid 5px brown;
     display: flex;
     flex-direction: column;
     text-align: center;
-    width:350px;
-    padding:7px;
+    width: 350px;
+    padding: 7px;
 }
 
 
-body{
+body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap:16px;
-    margin:0px;
+    gap: 16px;
+    margin: 0px;
 }
 
-#Display , #Display2{
-    height:50px;
+#Display,
+#Display2 {
+    height: 50px;
     align-content: center;
-    margin:10px;
+    margin: 10px;
+    font-size: 36px;
 }
-button{
-    margin:3px;
+
+button {
+    margin: 3px;
     background-color: aqua;
 }
 
-.header{
-    display:flex;
+.header {
+    display: flex;
     flex-direction: column;
     background-color: antiquewhite;
-    width:100vw;
+    width: 100vw;
     text-align: center;
-    height:100px;
+    height: 100px;
     justify-content: space-around;
 }
 
-*{
+* {
     font-size: 40px;
 }
