--- a/Calc/styles.css
+++ b/Calc/styles.css
@@ -12,9 +12,17 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
+    flex:1;
     gap: 16px;
     margin: 0px;
-    height: 99vh;
+    min-height: 100vh;
+}
+
+.bodycont{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
 }
 
 #Display,
@@ -42,4 +50,5 @@ button {
 
 * {
     font-size: 40px;
+    
 }
