rounded edges for buttons

--- a/Calc/styles.css
+++ b/Calc/styles.css
@@ -36,6 +36,8 @@ body {
 button {
     margin: 3px;
     background-color: aqua;
+    border-radius: 10px;
+    border:5px solid aqua;
 }
 
 .header {
