--- a/style.css
+++ b/style.css
@@ -6,9 +6,45 @@ body {
     justify-content: center;
     align-content: center;
     background-color: blueviolet;
-    min-height: 98vh;
     gap: 16px;
+    margin:0;
+}
+#active{
+    background-color: green;
+}
 
+.navBar {
+    font-size:24px;
+    display: inline-flex !important;
+    height: 80px !important;
+    margin: 0px !important;
+    padding: 0px !important;
+    background-color: rgb(161, 96, 221) !important;
+    
+}
+.navBar>ul{
+    padding:0 !important;
+}
+.navBar>ul>li {
+    list-style: none !important;
+    display: inline !important;
+    padding: 8px !important;
+    border: 2px solid grey !important;
+    margin-left: 5px !important;
+    text-align: left !important;
+}
+
+.navBar>ul>li:hover{
+    background-color: bisque;
+}
+
+.main div {
+    margin: 32px;
+}
+
+a {
+    text-decoration: none;
+    color: burlywood;
 }
 
 button {
@@ -18,6 +54,7 @@ button {
     width: 400px;
     height: 400px;
     align-self: center;
+    font-size: 20px;
 }
 
 #score {
@@ -29,32 +66,33 @@ button {
     font-size: 20px;
 }
 
-.container{
+.container {
     display: flex;
     justify-content: center;
-    gap:16px;
+    gap: 16px;
 }
 
-.container button{
+.container button {
     height: 200px;
 }
 
-img{
-    width:400px;
+img {
+    width: 400px;
     object-fit: contain;
     align-self: center;
 }
 
-.footer{
+.footer {
     display: flex;
     position: absolute;
-    bottom:0%;
+    bottom: 0%;
     text-align: right;
     width: 98%;
     justify-content: space-between;
 }
-.footer a{
+
+.footer a {
     text-decoration: none;
     align-self: center;
-    color:rgb(210, 222, 53);
+    color: rgb(210, 222, 53);
 }
