--- a/ADVHTML/styles.css
+++ b/ADVHTML/styles.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.cdnfonts.com/css/edo-sz');
 
-
-
 table,
 td,
 th {
     border: 1px solid antiquewhite;
+}
+#data{
+    height:30px;
+    text-align: center;
 }
 
 td:hover,
@@ -25,9 +27,4 @@ tr:first-child{
 table {
     border-collapse: collapse;
     background-color: grey;
-}
-
-body {
-    color: white;
-    background-color: black;
 }
