Universal link color

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body#main{
+body#main {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -6,29 +6,32 @@ body#main{
     justify-content: center;
     align-content: center;
     gap: 16px;
-    margin:0;
+    margin: 0;
 }
 
-body{
+body {
     background-color: blueviolet;
 }
-#active{
+
+#active {
     background-color: green;
 }
 
 .navBar {
-    font-size:24px;
+    font-size: 24px;
     display: inline-flex !important;
     height: 80px !important;
     margin: 0px !important;
     padding: 0px !important;
     background-color: rgb(161, 96, 221) !important;
-    width:100%;
-    
+    width: 100%;
+
 }
-.navBar>ul{
-    padding:0 !important;
+
+.navBar>ul {
+    padding: 0 !important;
 }
+
 .navBar>ul>li {
     list-style: none !important;
     display: inline !important;
@@ -38,7 +41,7 @@ body{
     text-align: left !important;
 }
 
-.navBar>ul>li:hover{
+.navBar>ul>li:hover {
     background-color: bisque;
 }
 
@@ -46,7 +49,7 @@ body{
     margin: 32px;
 }
 
-#main a {
+a {
     text-decoration: none;
     color: burlywood;
 }
