--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body#main {
     align-content: center;
     gap: 16px;
     margin: 0;
+    max-width: 100vw;
 }
 
 body {
@@ -21,10 +22,10 @@ body {
     font-size: 24px;
     display: inline-flex !important;
     height: 80px !important;
-    margin: 0px !important;
+    margin-left: 0;
     padding: 0px !important;
     background-color: rgb(161, 96, 221) !important;
-    width: 100%;
+    width: 100vw;
 
 }
 
@@ -46,7 +47,7 @@ body {
 }
 
 .main div {
-    margin: 32px;
+    margin: 5vh;
 }
 
 a {
@@ -58,8 +59,8 @@ a {
     background-color: aqua;
     border-radius: 5px;
     border: 5px solid aqua;
-    width: 400px;
-    height: 400px;
+    width: 20vw;
+    height: 20vh;
     align-self: center;
     font-size: 20px;
 }
@@ -74,13 +75,13 @@ a {
 }
 
 #main.container {
-    display: flex;
     justify-content: center;
+    overflow: hidden;
     gap: 16px;
 }
 
 #main.container button {
-    height: 200px;
+    height: 10vh;
 }
 
 #main img {
@@ -93,7 +94,7 @@ a {
     display: flex;
     position: absolute;
     bottom: 0;
-    width: 98%;
+    right:2vw;
     justify-content: space-between;
     color: rgb(210, 222, 53);
     align-self: center;
