--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     margin-left: 0;
     padding: 0px !important;
     background-color: rgb(161, 96, 221) !important;
-    width: 100vw;
+    width:100%;
 
 }
 
@@ -82,6 +82,7 @@ a {
 
 #main.container button {
     height: 10vh;
+    
 }
 
 #main img {
