--- a/TicTacToe/styles.css
+++ b/TicTacToe/styles.css
@@ -9,8 +9,8 @@ body {
     display: grid;
     align-self: center;
     width: fit-content;
-    grid-template-columns: 50px 50px 50px;
-    grid-template-rows: 50px 50px 50px;
+    grid-template-columns: 150px 150px 150px;
+    grid-template-rows: 150px 150px 150px;
     border: 5px solid black;
     background-color: bisque;
 }
@@ -23,19 +23,23 @@ body {
 
 .grid_item {
     border: 1px solid black;
-    display: inline-flex;
+    padding-bottom: 10px;
 }
 
 .grid_item p {
     text-align: center;
-    font-size: 40px;
-    margin:0px;
-    margin-left:10px;
+    align-content: center;
+    width:150px;
+    height: 130px;
+    font-size: 200px;
+    margin-top:-45px;
+
+
 }
 .Curr_turn{
     align-self: center;
     text-align: center;
-    font-size: 50px;
+    font-size: 100px;
     width:max-content;
 }
 
