--- a/TicTacToe/styles.css
+++ b/TicTacToe/styles.css
@@ -3,6 +3,7 @@ body {
     /* display: flex; */
     margin:0px;
     align-items: center;
+    line-height:normal;
 }
 
 .board {
@@ -33,9 +34,14 @@ body {
     align-content: center;
     justify-content: center;
     width:150px;
-    height: 150px;
-    font-size: 200px;
+    height: fit-content;
+    font-size: 150px;
     margin:0;
+    padding:0;
+    border:0;
+    /* margin-top:10px; */
+    line-height: 150px;
+
 }
 .Curr_turn{
     align-self: center;
