--- a/TicTacToe/styles.css
+++ b/TicTacToe/styles.css
@@ -1,60 +1,57 @@
 body {
-    justify-content: center;
-    /* display: flex; */
-    margin:0px;
-    align-items: center;
-    line-height:normal;
+  justify-content: center;
+  margin: 0px;
+  align-items: center;
+  line-height: normal;
 }
 
 .board {
-    display: grid;
-    align-self: center;
-    width: fit-content;
-    grid-template-columns: repeat(3,150px);
-    grid-template-rows: repeat(3,150px);
-    border: 5px solid black;
-    background-color: bisque;
+  display: grid;
+  align-self: center;
+  width: fit-content;
+  grid-template-columns: repeat(3, 150px);
+  grid-template-rows: repeat(3, 150px);
+  border: 5px solid black;
+  background-color: bisque;
 }
-.container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* align-content: center; */
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .grid_item {
-    border: 1px solid black;
-    /* display:flex; */
+  border: 1px solid black;
 }
 
 .grid_item span {
-    display:flex;
-    flex-wrap: wrap;
-    text-align: center;
-    align-content: center;
-    justify-content: center;
-    width:150px;
-    height: fit-content;
-    font-size: 150px;
-    margin:0;
-    padding:0;
-    border:0;
-    /* margin-top:10px; */
-    line-height: 150px;
-
-}
-.Curr_turn{
-    align-self: center;
-    text-align: center;
-    font-size: 100px;
-    width:max-content;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  align-content: center;
+  justify-content: center;
+  width: 150px;
+  height: fit-content;
+  font-size: 150px;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  line-height: 150px;
 }
 
-#reset{
-    width:150px;
-    height:50px;
-    margin:16px;
-    background-color:aquamarine;
-    border-radius: 20px;
-    align-self: center;
+.Curr_turn {
+  align-self: center;
+  text-align: center;
+  font-size: 100px;
+  width: max-content;
+}
+
+#reset {
+  width: 150px;
+  height: 50px;
+  margin: 16px;
+  background-color: aquamarine;
+  border-radius: 20px;
+  align-self: center;
 }
