--- a/webpack/src/styles.css
+++ b/webpack/src/styles.css
@@ -1,3 +1,133 @@
-h1{
-    color:blue;
+body{
+    margin:0;
+    padding:0;
+    min-height: 100vh;
+    background-color: rgb(203, 243, 230);
+}
+header a{
+    text-decoration: none;
+    margin-top:15px;
+}
+header button,header a{
+    color:white;
+    text-align: center;
+    align-self: center;
+    margin:10px;
+    width:75px;
+    height:40px;
+    background-color: rgb(49, 118, 254);
+    border-radius: 10px;
+    border:none;
+    font-weight: 600;
+    font-size:15px;
+}
+
+button#active{
+    background-color: rgb(3, 170, 3);
+}
+header button:hover{
+    cursor: pointer;
+}
+nav{
+    align-self: center;
+}
+#content{
+    display:flex;
+    justify-content: center;
+    min-height: calc(100vh - 160px);
+}
+#xdd{
+    height:200px;
+    width:fit-content;
+}
+#hometext{
+    font-size: 20px;
+}
+#homelist{
+    list-style: none;
+    
+}
+#homelist li{
+    font-size: 20px;
+    font-weight: 600;
+}
+
+header{
+    background-color: #90bef7;
+    display:flex;
+    width:100%;
+    height: 100px;
+    justify-content: center;
+    align-content: center;
+}
+#cont{
+    align-items: center;
+    display:flex;
+    flex-direction: column;
+    width:700px;
+    padding:20px;
+    margin-top: 30px;
+    background-color: #9caec4;
+    border-radius: 5px;
+    border:5px solid black;
+    margin-bottom: 50px;
+}
+#Dishtemp{
+    width:100%;
+    display:flex;
+    flex-direction: column;
+    background-color: #90bef7;
+    margin:16px;
+}
+
+#Dishhead{
+    text-align: center;
+    margin:5px;
+}
+
+#Dishcont{
+    display:flex;
+    margin:0px 5px 10px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#Dishtext{
+    width:300px;
+}
+#Dishimg{
+    justify-self: flex-end;
+    max-height: 200px;
+    clip-path: circle();
+}
+#abouttext{
+    font-size:24px;
+    line-height: 2rem;
+    margin:35px;
+}
+
+
+footer{
+    position:relative;
+    flex-wrap: wrap;
+    bottom:0;
+    height:100px;
+    display:flex;
+    padding-bottom: 10px;
+    justify-content: center;
+    width:100%;
+    background-color: rgb(254, 233, 97);
+}
+footer p{
+    text-align: center;
+    align-self: center;
+    margin:0 auto;
+}
+
+#okimg{
+    align-self: flex-end;
+    bottom:0;
+    right:10px;
+    height:100px;
+    opacity: 50%;
 }
