--- a/webpack/src/styles.css
+++ b/webpack/src/styles.css
@@ -5,14 +5,20 @@ body{
     background-color: rgb(203, 243, 230);
 }
 header a{
+    display:flex;
+    align-items: center;
+    justify-content: center;
     text-decoration: none;
-    margin-top:15px;
+    margin:0;
+    width:100%;
+    height: 100%;
 }
-header button,header a{
+header button,a{
     color:white;
     text-align: center;
     align-self: center;
     margin:10px;
+    gap:10px;
     width:75px;
     height:40px;
     background-color: rgb(49, 118, 254);
@@ -93,12 +99,15 @@ header{
 }
 
 #Dishtext{
-    width:300px;
+    width:400px;
 }
 #Dishimg{
     justify-self: flex-end;
     max-height: 200px;
     clip-path: circle();
+    aspect-ratio: 1/1;
+    border:1px solid red;
+    margin-right:-40px;
 }
 #abouttext{
     font-size:24px;
